fix: add to cart button mobile view

--- a/src/scss/components/catalog/_catalog.scss
+++ b/src/scss/components/catalog/_catalog.scss
@@ -12,6 +12,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    row-gap: 10px;
     margin-top: 30px;
     margin-bottom: 30px;
     padding-bottom: 30px;
@@ -60,12 +61,27 @@
     &:last-child {
       margin-right: 0px;
     }
-    &.active {
-      opacity: 1;
-    }
     i {
       display: block;
       line-height: 0;
+    }
+    &.view-mode-active {
+      opacity: 1;
+    }
+    &.list-view {
+      transform: scale(1.3);
+      @media (any-hover: hover) {
+        &:hover {
+          transform: scale(1.5);
+        }
+      }
+    }
+    &.grid-view {
+      @media (any-hover: hover) {
+        &:hover {
+          transform: scale(1.2);
+        }
+      }
     }
   }
 
@@ -83,6 +99,7 @@
     margin-bottom: 0;
     font-weight: 600;
     line-height: 1;
+    cursor: default;
     span {
       color: $darkGrayColor;
       font-size: 14px;
@@ -131,6 +148,7 @@
   }
 
   &__item {
+    position: relative;
     cursor: pointer;
     display: flex;
     flex-direction: column;
@@ -142,8 +160,16 @@
     &:hover,
     :focus {
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-      .image-overlay {
-        opacity: 1;
+    }
+    @media (any-hover: hover) {
+      &:hover {
+        .image-overlay {
+          opacity: 1;
+        }
+        .buy-button {
+          opacity: 1;
+          visibility: visible;
+        }
       }
     }
   }
@@ -185,16 +211,28 @@
 
   &__info {
     padding: 7px 7px 10px 7px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    @media (max-width: $mobile) {
+      margin-top: 55px;
+    }
   }
 
   &__name {
+    font-size: 1.6rem;
     font-weight: 600;
     text-transform: capitalize;
     margin: 7px 0 7px 0;
     text-align: center;
+    line-height: 2rem;
+    @media (max-width: $mobileSmall) {
+      font-size: 1.6rem;
+    }
   }
 
   &__price {
+    font-size: 1.5rem;
     line-height: 1.3rem;
     text-align: center;
     text-transform: capitalize;
@@ -203,16 +241,17 @@
 
 .buy-button {
   position: absolute;
+  bottom: 35%;
+  left: 50%;
+  transform: translate(-50%);
+  opacity: 0;
+  visibility: hidden;
   background-color: #fff;
-  font-size: 18px;
-  display: inline-flex;
-  align-items: center;
   padding: 1rem;
-  border-radius: 0.5rem;
+  font-size: 18px;
   font-weight: 700;
   box-shadow: 0 0 15px #00000026;
-  top: 40%;
-  left: 35%;
+  border-radius: 0.4rem;
   transition: all 0.3s ease-out 0s;
   cursor: pointer;
   z-index: 3;
@@ -226,5 +265,12 @@
     transition: all 0.3s ease 0s;
     color: $mainColor;
     font-size: 22px;
+  }
+  @media (max-width: $mobile) {
+    width: 90%;
+    opacity: 1;
+    visibility: visible;
+    bottom: 18%;
+    background-color: $yellowColor;
   }
 }
